--- a/src/components/ParentForm.css
+++ b/src/components/ParentForm.css
@@ -1,49 +1,32 @@
-/* select.open {
-    position: absolute;
-    top: 100%;
-    left: 0;
-  } */
-
-  .info-button {
-    position: relative;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    padding: 0;
-  }
-  
-  .info-icon {
-    display: inline-block;
-    width: 24px;
-    height: 24px;
-    line-height: 24px;
+.loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
     text-align: center;
-    background-color: #f0f0f0;
-    border-radius: 50%;
   }
   
-  .tooltip-text {
-    width: 200px;
-    visibility: hidden;
-    background-color: #000;
-    color: #fff;
-    text-align: center;
-    border-radius: 5px;
-    padding: 5px;
-    position: absolute;
-    z-index: 1;
-    bottom: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-    font-size: 12px;
+  .loading-bar {
+    width: 100%;
+    height: 4px;
+    background-color: #ccc;
   }
   
-  .info-button:hover .tooltip-text {
-    visibility: visible;
-    opacity: 1;
+  .loading-bar::after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 100%;
+    background-color: #007bff; /* Adjust the color as needed */
+    animation: loadingAnimation 1.5s infinite;
   }
-
-
+  
+  @keyframes loadingAnimation {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(100%);
+    }
+  }
