--- a/src/components/RecordList.css
+++ b/src/components/RecordList.css
@@ -1,30 +1,15 @@
 .loading-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px; /* Adjust the height as needed */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  /* Adjust the height as needed */
+}
+
+/* Define a breakpoint for mobile devices */
+@media screen and (max-width: 768px) {
+  /* Decrease font size for table cells on smaller screens */
+  table {
+    font-size: 12px;
   }
-  
-  .loading-bar {
-    width: 100%;
-    height: 4px;
-    background-color: #ccc;
-  }
-  
-  .loading-bar::after {
-    content: "";
-    display: block;
-    width: 30px;
-    height: 100%;
-    background-color: #007bff; /* Adjust the color as needed */
-    animation: loadingAnimation 1.5s infinite;
-  }
-  
-  @keyframes loadingAnimation {
-    0% {
-      transform: translateX(-100%);
-    }
-    100% {
-      transform: translateX(100%);
-    }
-  }
+}
