--- a/src/components/RecordList.css
+++ b/src/components/RecordList.css
@@ -8,7 +8,7 @@
 
 .custom-spinner {
   border: 4px solid rgba(0, 0, 0, 0.1);
-  border-top: 4px solid #3498db; /* Change the color as needed */
+  border-top: 4px solid #3498db; 
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -24,6 +24,9 @@
 @media screen and (max-width: 768px) {
   /* Decrease font size for table cells on smaller screens */
   table {
+    font-size: 11px;
+  }
+  label {
     font-size: 12px;
   }
 }
